--- a/posttest/src/main/resources/application.properties
+++ b/posttest/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8888
-spring.datasource.url=jdbc:postgresql://localhost:5432/lottery
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/lottery}
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
